     logging activity taken to its _activity attribute. (Robert Collins)

   * When running bzr commands within the test suite, internal exceptions are
     not caught and reported in the usual way, but rather allowed to propagate
     up and be visible to the test suite.  A new API ``run_bzr_catch_user_errors``
     makes this behavior available to other users.
     (Martin Pool)


bzr 0.91 2007-09-26
===================

  BUG FIXES:

   * Print a warning instead of aborting the ``python setup.py install``
     process if building of a C extension is not possible.
     (Lukáš Lalinský, Alexander Belchenko)

   * Fix commit ordering in corner case (Aaron Bentley, #94975)

   * Fix ''bzr info bzr://host/'' and other operations on ''bzr://' URLs with
     an implicit port.  We were incorrectly raising PathNotChild due to
     inconsistent treatment of the ''_port'' attribute on the Transport object.
     (Andrew Bennetts, #133965)

   * Make RemoteRepository.sprout cope gracefully with servers that don't
     support the ``Repository.tarball`` request.
     (Andrew Bennetts)


bzr 0.91rc2 2007-09-11
======================

   * Replaced incorrect tarball for previous release; a debug statement was left 
     in bzrlib/remote.py.


bzr 0.91rc1 2007-09-11
======================

  CHANGES:

   * The default branch and repository format has changed to 
     ``dirstate-tags``, so tag commands are active by default.
     This format is compatible with Bazaar 0.15 and later.
     This incidentally fixes bug #126141.
     (Martin Pool)

   * ``--quiet`` or ``-q`` is no longer a global option. If present, it
     must now appear after the command name. Scripts doing things like
     ``bzr -q missing`` need to be rewritten as ``bzr missing -q``.
     (Ian Clatworthy)

  FEATURES:

   * New option ``--author`` in ``bzr commit`` to specify the author of the
     change, if it's different from the committer. ``bzr log`` and